<resources>
    <!--SharedPreferences-->
    //poner nombre del paquete p no confundir c otro shared preferences
    <string name="name_file_preferences">com.example.bookodemia.sharedPreferences</string>
    <!--Keys-->
    <string name="key_token">plain-text-token</string>

    <!--Strings card view item-->
    <string name="tv_titulo">Título: %s</string>
    <string name="tv_autor">Content: %s</string>


    <!--Métodos API-->
    <string name="api_login">login</string>

    <string name="app_name">BooKodemia</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="todavia_no_tienes_cuenta">¿Todavía no tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="bookcase">bookCase</string>
    <string name="button_more_about_book">Button</string>
    <string name="more_about_book">Más acerca del libro</string>
    <string name="hola">Hola</string>
    <string name="mas_populares">Más populares</string>
    <string name="libros">Libros</string>
    <string name="categorias">Categorías</string>
    <string name="autores">Autores</string>
    <string name="recien_agregados">Recien agregados</string>
    <string name="registra_tu_informacion">Registra tu información</string>
    <string name="correo">Correo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="estas_a_unos_cuantos_pasos_de_vivir_la_mejor_experiencia">Estas a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="regresar_caracter_especial"><![CDATA[< Regresar]]></string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="tv_perfil">Perfil</string>
    <string name="contrasena_perfil">Contraseña: %s</string>
    <string name="api_logout">logout</string>
    <string name="api_registro">register</string>
    <string name="api_libros">books</string>
    <string name="error_internet">Sin conexión a internet</string>
</resources>