<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_200"
            android:importantForAccessibility="no"
            tools:layout_editor_absoluteX="-89dp"
            tools:layout_editor_absoluteY="117dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="200dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/bienvenido"
                android:textColor="@color/indigo_900"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/correo"
                android:textColor="@color/indigo_900"
                android:textColorHint="@color/indigo_900"
                app:boxStrokeColor="@color/indigo_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray_input"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="-60dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/banner"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="62dp"
                android:fontFamily="sans-serif"
                android:text="@string/todavia_no_tienes_cuenta"
                android:textColor="@color/indigo_900"
                app:layout_constraintEnd_toEndOf="@+id/button_login"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="@+id/button_login"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <Button
                android:id="@+id/text_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="52dp"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:text="@string/registrate"
                android:textColor="@color/indigo_900"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/button_login"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/till_password1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:textColor="@color/indigo_900"
                android:textColorHint="@color/indigo_900"
                app:boxStrokeColor="@color/indigo_900"
                app:layout_constraintTop_toBottomOf="@+id/til_email1"
                app:prefixTextColor="@color/indigo_900"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/gray_input"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/indigo_900"
                android:gravity="center"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/till_password1"
                app:layout_constraintStart_toStartOf="@+id/till_password1"
                app:layout_constraintTop_toBottomOf="@+id/till_password1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>