<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_book"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="32dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView_book"
            android:layout_width="77dp"
            android:layout_height="141dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/bookcase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/libro_1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_more_about_book"
            app:layout_constraintStart_toEndOf="@+id/imageView_book"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Título" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_content"
            android:layout_width="0dp"
            android:justificationMode="inter_word"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/gray_input"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/button_more_about_book"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toEndOf="@+id/imageView_book"
            app:layout_constraintTop_toBottomOf="@+id/textView_titulo"
            tools:text="Content:" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/gray_input"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView_book"
            app:layout_constraintTop_toBottomOf="@+id/textView_content"
            tools:text="Categoría" />


        <CheckBox
            android:id="@+id/favorite"
            android:layout_width="24dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:button="@drawable/ic_baseline_favorite_border_14"
            app:buttonTint="@color/indigo_900"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_book"
            app:layout_constraintVertical_bias="0.93"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/share"
            android:layout_width="24dp"
            android:layout_height="35dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:button="@drawable/ic_baseline_share_14"
            app:buttonTint="@color/indigo_900"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_book"
            app:layout_constraintVertical_bias="0.93"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_more_about_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/indigo_900"
            android:text="@string/button_more_about_book"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_book"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/more_about_book" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>